@startuml
title "Order State Diagram (Order.order_status)"
skinparam shadowing false
skinparam state {
  BackgroundColor #LightGoldenRodYellow
  BorderColor #555
  RoundCorner 10
}

' --- States ---
state "Order Received\n(RECEIVED)" as Received
state "Preparing\n(PREPARING)" as Preparing
state "Delivering\n(DELIVERING)" as Delivering
state "Completed\n(COMPLETED)" as Completed
state "Cancelled\n(CANCELLED)" as Cancelled
state "Payment Failed\n(PAYMENT_FAILED)" as PaymentFailed

' --- Transitions ---

' Entry Point
' OrderService.create_order() inserts into orders table
' always starting with RECEIVED status
[*] --> Received : OrderService.create_order()\n(order_status='RECEIVED')

' From RECEIVED state
Received --> Preparing : update_order_status()\n(order.py:533)\nPATCH /api/orders/{id}/status\nnew_status='PREPARING'
Received --> Cancelled : cancel_order()\n(order.py:677)\nPOST /api/orders/{id}/cancel
Received --> PaymentFailed : PaymentService.process_mock_payment()\n(payment_service.py:96)\nfailure sets order_status='PAYMENT_FAILED'

' From PREPARING state
Preparing --> Delivering : update_order_status()\n(order.py:533)\nPATCH /api/orders/{id}/status\nnew_status='DELIVERING'

' From DELIVERING state
Delivering --> Completed : update_order_status()\n(order.py:533) + consume_order_inventory()\n(order_service.py:1345)\nPATCH /api/orders/{id}/status\nnew_status='COMPLETED'

' End States
Completed --> [*]
Cancelled --> [*]
PaymentFailed --> [*]

@enduml